EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==10/03/2010==
Derision: Fixed bug in SoD+ tracking.
JJ: Removed redundant namespace usage.

==10/02/2010==
Derision: Players disconnected with the Respawn Window up will now return to bind.
Derision: Players rezzed in an instance via the Respawn Window will no longer zone.
Derision: Implemented Blocked Buffs.
Derision: Fixed Blocked Buff spam every time you zone.
Derision: Implemented OP_ClearBlockedBuffs.

==09/29/2010==
Derision: Fixed crash in combat logging when a player was DoTted, zoned and then died from the DoT.
Derision: Spells should no longer land on players with the Respawn Window up (e.g. AE DoTs, Evac spells).
Derision: The client should now ummem spells on death when the Respawn Window is in use.

==09/26/2010==
WildcardX: Updated bots.sql to catch a couple database object changes that affected bots over the last months.

==09/25/2010==
Derision: Only one Rez confirmation box is allowed to be up at a time (per character).
Derision: Enabled Respawn Window for SoF and later clients. Rule disabled by default.
Derision: Respawn Window only pops-up if a corpse is left (so #gm off to test it).

Optional SQL (and to enable it):

utils/sql/svn/1672_optional_rules_respawn_window.sql

==09/24/2010==
Congdar: Remove obsolete bot code, fix compile warning

==09/23/2010==
Congdar: Bots can now equip multi slot items in the desired slot. The first available empty slot will get the item.
Congdar: Bots now check Lore and Dual Wield with the new multi slot item code.

==09/13/2010==
JJ: Fix to prevent NPCs using death animation from facing target during EVENT_SAY and EVENT_ITEM
Derision: Fix for missing tradeskill objects etc in SoF and later clients.
Derision: Reverted stun resist changes.

==09/12/2010==
Derision: /guildstatus now works for SoD and UF.
Caryatis: Spells with a Melee Lifetap effect now cap the heal at the percentage specified in the spell data.