@@ -1,0 +1,2 @@
+ALTER TABLE object MODIFY objectname varchar(32);
+ALTER TABLE zone MODIFY short_name varchar(32);
